rust/surrealdb-orm-tests/tests/snapshots/test_query_builder__tests__multiplication_tests1-2.snap
---
source: surrealdb-macros/tests/test_query_builder.rs
expression: query1.get_bindings()
---
[
    Binding {
        param: "_param_00000000",
        value: Table(
            Table(
                "book",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "book",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "lowo",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "'lowo'",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Table(
            Table(
                "age",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "age",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Number(
            Int(
                600,
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "600",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "Oyelowo",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "'Oyelowo'",
        description: None,
    },
    Binding {
        param: "_param_00000000",
        value: Strand(
            Strand(
                "Oyedayo",
            ),
        ),
        original_inline_name: "_param_00000000",
        raw_string: "'Oyedayo'",
        description: None,
    },
]
