rust/surrealdb-orm-tests/tests/snapshots/test_query_builder__tests__relate_query_building_for_ids.snap
---
source: surrealdb-macros/tests/test_query_builder.rs
expression: relate_simple
---
RELATE student:1->writes->book:2 CONTENT $_param_00000000 ;
